--- a/app/src/main/res/drawable/primary_button_background.xml
+++ b/app/src/main/res/drawable/primary_button_background.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="#2C3E50"/>
-            <corners android:radius="12dp"/>
-        </shape>
-    </item>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#40FFFFFF">
     <item>
-        <shape>
-            <solid android:color="#2C3E50"/>
-            <corners android:radius="12dp"/>
+        <shape android:shape="rectangle">
+            <solid android:color="#2C3E50" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
-</selector>
+</ripple>
